Added @TestLogger extension